--- a/docs.yaml
+++ b/docs.yaml
@@ -25,6 +25,9 @@
 - project:
     name: tutorials
     jobs:
-      - '{name}-dummy':
+      - '{name}-jekyll-test-build':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-jekyll-test-build-cleanup':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
