--- a/docs.yaml
+++ b/docs.yaml
@@ -25,6 +25,6 @@
 - project:
     name: tutorials
     jobs:
-      - '{name}-dummy':
+      - '{name}-jekyll-test-build':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
