Add Gerrit comment with URL on jekyll test build
Change-Id: Ibfce7270d6dad4e6d8c9e380cd6455f7dd1eed49

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -256,6 +256,7 @@
           curl -s -X POST -H "X-Auth-Token: $OS_TOKEN" -H 'X-Container-Meta-Web-Index: index.html' $SWIFTURL
           curl -s -X POST -H "X-Auth-Token: $OS_TOKEN" -H 'X-Container-Meta-Web-Listings: true' $SWIFTURL
           curl -s -X POST -H "X-Auth-Token: $OS_TOKEN" -H 'X-Container-Read: .r:*,.rlistings' $SWIFTURL
+          curl -s --user $GERRIT_API -X POST -H 'Content-Type: application/json' -d "{'message': 'Test at: $SWIFTURL'}" https://review.rc.nectar.org.au/a/changes/$GERRIT_CHANGE_ID/revisions/$GERRIT_PATCHSET_NUMBER/review
 
 - builder:
     name: jekyll-test-build-cleanup
