--- a/python.yaml
+++ b/python.yaml
@@ -514,6 +514,21 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: networking-midonet
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: neutron-lbaas-dashboard
     jobs:
       - '{name}-os-tox-{environment}':
