--- a/puppet.yaml
+++ b/puppet.yaml
@@ -20,6 +20,13 @@
          organisation: 'internal'
 
 - project:
+    name: puppet-barbican
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-bind
     jobs:
       - '{name}-puppet-unit':
