--- a/python.yaml
+++ b/python.yaml
@@ -379,6 +379,21 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: octavia-lib
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: magnum
     jobs:
       - '{name}-os-tox-{environment}':
