Fix Jekyll cleanup job
Change-Id: Icb92a7003c02a393cbf8f9754d68fddbbd66c5ce

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -645,7 +645,7 @@
 - job-template:
     name: '{name}-jekyll-test-build'
     defaults: global
-    node: bionic
+    node: openstack
 
     parameters:
       - string:
@@ -699,7 +699,7 @@
 - job-template:
     name: '{name}-jekyll-test-build-cleanup'
     defaults: global
-    node: upgrader
+    node: openstack
 
     parameters:
       - string:
