--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -243,7 +243,7 @@
           export OS_AUTH_TYPE=v3applicationcredential
           export OS_APPLICATION_CREDENTIAL_ID=$CREDENTIAL_ID
           export OS_APPLICATION_CREDENTIAL_SECRET=$CREDENTIAL_SECRET
-          CONTAINER="$JOB_NAME-$GERRIT_CHANGE_ID-$GERRIT_PATCHSET_NUMBER"
+          CONTAINER="jekyll-test-build-$GERRIT_CHANGE_ID-$GERRIT_PATCHSET_NUMBER"
           openstack container delete --recursive $CONTAINER || true
           AUTH=$(openstack container create $CONTAINER -f value -c account)
           BASEURL=v1/$AUTH/$CONTAINER
@@ -266,7 +266,7 @@
           export OS_AUTH_TYPE=v3applicationcredential
           export OS_APPLICATION_CREDENTIAL_ID=$CREDENTIAL_ID
           export OS_APPLICATION_CREDENTIAL_SECRET=$CREDENTIAL_SECRET
-          CONTAINER="$JOB_NAME-$GERRIT_CHANGE_ID-$GERRIT_PATCHSET_NUMBER"
+          CONTAINER="jekyll-test-build-$GERRIT_CHANGE_ID-$GERRIT_PATCHSET_NUMBER"
           openstack container delete --recursive $CONTAINER
 
 
