--- a/python.yaml
+++ b/python.yaml
@@ -54,6 +54,21 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: nectar-osc
+    jobs:
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'flake8'
+      - '{name}-bionic-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: nectar-tools
     jobs:
       - '{name}-bionic-tox-{environment}':
