Jekyll needs at least Bionic for app creds
Change-Id: I4498fc6a13fcff0943b87c473aa9ec568a89ace8

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -645,7 +645,7 @@
 - job-template:
     name: '{name}-jekyll-test-build'
     defaults: global
-    node: openstack
+    node: bionic
 
     parameters:
       - string:
