Add JS testing to octavia-dashboard
Change-Id: I4849f3785c5dd43ab61a9890c99275dee5b89359

--- a/python.yaml
+++ b/python.yaml
@@ -407,6 +407,14 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'eslint'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'karma'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
