Do separate production branch for puppet-nectar
Change-Id: Ib911b341da8238ab68376711c80d21c077f93805

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -340,6 +340,9 @@
       - '{name}-puppet-unit':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-puppet-prod-review':
+         access: 'nobody'
+         organisation: 'internal'
 
 - project:
     name: puppet-neutron
