Add jobs for manuka
Change-Id: I5c16f0d537a0f762420d0b73e8a8a6acecc5be99

--- a/python.yaml
+++ b/python.yaml
@@ -202,6 +202,21 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: manuka
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'nobody'
+         organisation: 'internal'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'nobody'
+         organisation: 'internal'
+         environment: 'flake8'
+      - '{name}-os-deb-package':
+         access: 'nobody'
+         organisation: 'internal'
+
+- project:
     name: rcshibboleth
     jobs:
       - '{name}-os-tox-{environment}':
