--- a/python.yaml
+++ b/python.yaml
@@ -205,16 +205,16 @@
     name: manuka
     jobs:
       - '{name}-os-tox-{environment}':
-         access: 'nobody'
-         organisation: 'internal'
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'py36'
       - '{name}-os-tox-{environment}':
-         access: 'nobody'
-         organisation: 'internal'
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-os-deb-package':
-         access: 'nobody'
-         organisation: 'internal'
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: rcshibboleth
