Add puppet-manuka module
Change-Id: I4a0099e4915a76a1f4dccc88742b087ddf191ce2

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -125,6 +125,13 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: puppet-manuka
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-memcached
     jobs:
       - '{name}-puppet-unit':
