Add Ubuntu 20.04 LTS (Focal) support
Change-Id: Ic73bb4511a41d1db001aa9149526349e541a100a

--- a/images.yaml
+++ b/images.yaml
@@ -49,6 +49,11 @@
       - 'image-build-{name}'
 
 - project:
+    name: ubuntu-20.04-x86_64
+    jobs:
+      - 'image-build-{name}'
+
+- project:
     name: ubuntu-18.04-x86_64-docker
     jobs:
       - 'image-build-{name}'
