Add job for uploading to pypi
Change-Id: I194a5ea2e1e9bb8a0522a438749689f0f14344c8

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -440,3 +440,33 @@
           RET=${{PIPESTATUS[0]}}
           rm -rf $tmpdir
           exit $RET
+
+
+- builder:
+    name: pypi-upload
+    builders:
+      - shell: |
+          #!/bin/bash
+          #get highest tag number
+          TAG_VERSION=`git describe --abbrev=0 --tags`
+          # Project version
+          PROJECT_VERSION=`python3 setup.py --version`
+          if [[ "$PROJECT_VERSION" == "$TAG_VERSION" ]]; then
+              echo "No change in version"
+              exit 0
+          fi
+          echo "Tagging release to $PROJECT_VERSION"
+          #get current hash and see if it already has a tag
+          GIT_COMMIT=`git rev-parse HEAD`
+          NEEDS_TAG=`git describe --contains $GIT_COMMIT 2>/dev/null`
+          #only tag if no tag already
+          if [ -z "$NEEDS_TAG" ]; then
+              git tag -a $PROJECT_VERSION -m "New auto tagged release ${PROJECT_VERSION}"
+              echo "Tagged with $PROJECT_VERSION"
+              rm -rf dist/*
+              python3 setup.py sdist bdist_wheel
+              twine upload --config-file $PYPIRC dist/*
+              git push alt-origin --tags
+          else
+              echo "Already a tag on this commit"
+          fi
