--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -104,44 +104,6 @@
       - shell: 'hivemind pbuilder.create --os-release {os_release} || hivemind pbuilder.update --os-release {os_release}'
 
 - builder:
-    name: 'os-pbuilder-checkout'
-    builders:
-      - shell: |
-          # Set up remote for github or internal or uom gitlab, since we have no tags otherwise.
-          git remote | grep 'alt-origin' > /dev/null && retval=0 || retval=1
-          if [ $retval -ne 0 ]; then
-
-            git remote -v | grep '29418/NeCTAR-RC' > /dev/null && retval=0 || retval=1
-            if [ $retval -eq 0 ]; then
-              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
-              git remote add alt-origin https://github.com/$URL
-            fi
-
-            git remote -v | grep '29418/internal' > /dev/null && retval=0 || retval=1
-            if [ $retval -eq 0 ]; then
-              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
-              git remote add alt-origin git@git.rc.nectar.org.au:$URL
-            fi
-
-            git remote -v | grep '29418/resplat-cloud' > /dev/null && retval=0 || retval=1
-            if [ $retval -eq 0 ]; then
-              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
-              git remote add alt-origin git@gitlab.unimelb.edu.au:$URL
-            fi
-          fi
-          git fetch --tags alt-origin
-          if [ ! -d debian ]; then
-            for rb in `git branch -r --list | grep alt-origin | grep debian`
-            do
-              branch=`echo $rb | sed "s,alt-origin/,,g"`;
-              git branch $branch alt-origin/$branch;
-            done
-          fi
-
-          git branch -d $GERRIT_BRANCH || true
-          git checkout -b $GERRIT_BRANCH origin/$GERRIT_BRANCH
-
-- builder:
     name: 'pbuilder-buildpackage'
     builders:
       - shell: |
@@ -443,10 +405,82 @@
 
 
 - builder:
+    name: 'os-pbuilder-checkout'
+    builders:
+      - shell: |
+          # Set up remote for github or internal or uom gitlab, since we have no tags otherwise.
+          git remote | grep 'alt-origin' > /dev/null && retval=0 || retval=1
+          if [ $retval -ne 0 ]; then
+
+            git remote -v | grep '29418/NeCTAR-RC' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin https://github.com/$URL
+            fi
+
+            git remote -v | grep '29418/internal' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@git.rc.nectar.org.au:$URL
+            fi
+
+            git remote -v | grep '29418/resplat-cloud' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@gitlab.unimelb.edu.au:$URL
+            fi
+          fi
+          git fetch --tags alt-origin
+          if [ ! -d debian ]; then
+            for rb in `git branch -r --list | grep alt-origin | grep debian`
+            do
+              branch=`echo $rb | sed "s,alt-origin/,,g"`;
+              git branch $branch alt-origin/$branch;
+            done
+          fi
+
+          git branch -d $GERRIT_BRANCH || true
+          git checkout -b $GERRIT_BRANCH origin/$GERRIT_BRANCH
+
+- builder:
     name: pypi-upload
     builders:
       - shell: |
           #!/bin/bash
+          # Set up remote for github or internal or uom gitlab, since we have no tags otherwise.
+          git remote | grep 'alt-origin' > /dev/null && retval=0 || retval=1
+          if [ $retval -ne 0 ]; then
+
+            git remote -v | grep '29418/NeCTAR-RC' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@github.com:$URL
+            fi
+
+            git remote -v | grep '29418/internal' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@git.rc.nectar.org.au:$URL
+            fi
+
+            git remote -v | grep '29418/resplat-cloud' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@gitlab.unimelb.edu.au:$URL
+            fi
+          fi
+          git fetch --tags alt-origin
+          if [ ! -d debian ]; then
+            for rb in `git branch -r --list | grep alt-origin | grep debian`
+            do
+              branch=`echo $rb | sed "s,alt-origin/,,g"`;
+              git branch $branch alt-origin/$branch;
+            done
+          fi
+
+          git branch -d $GERRIT_BRANCH || true
+          git checkout -b $GERRIT_BRANCH origin/$GERRIT_BRANCH
+
           #get highest tag number
           TAG_VERSION=`git describe --abbrev=0 --tags`
           # Project version
