Minor bug fix for pypi upload and add to more projects
Change-Id: I3d075e3adb0a1a042491e94d8cfed644b533753e

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -447,6 +447,40 @@
     builders:
       - shell: |
           #!/bin/bash
+          # Set up remote for github or internal or uom gitlab, since we have no tags otherwise.
+          git remote | grep 'alt-origin' > /dev/null && retval=0 || retval=1
+          if [ $retval -ne 0 ]; then
+
+            git remote -v | grep '29418/NeCTAR-RC' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@github.com:$URL
+            fi
+
+            git remote -v | grep '29418/internal' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@git.rc.nectar.org.au:$URL
+            fi
+
+            git remote -v | grep '29418/resplat-cloud' > /dev/null && retval=0 || retval=1
+            if [ $retval -eq 0 ]; then
+              URL=$(git remote -v | grep 29418 | sed 's/.*29418\/\(.*\) .*/\1/' | head -1)
+              git remote add alt-origin git@gitlab.unimelb.edu.au:$URL
+            fi
+          fi
+          git fetch --tags alt-origin
+          if [ ! -d debian ]; then
+            for rb in `git branch -r --list | grep alt-origin | grep debian`
+            do
+              branch=`echo $rb | sed "s,alt-origin/,,g"`;
+              git branch $branch alt-origin/$branch;
+            done
+          fi
+
+          git branch -d $GERRIT_BRANCH || true
+          git checkout -b $GERRIT_BRANCH origin/$GERRIT_BRANCH
+
           #get highest tag number
           TAG_VERSION=`git describe --abbrev=0 --tags`
           # Project version
