Fix up puppet-nectar prod auto review
Change-Id: Id57ae5a9f2ee99f93f08646ebd364e0f7f31546c

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -348,8 +348,8 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
       - '{name}-puppet-prod-review':
-         access: 'nobody'
-         organisation: 'internal'
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: puppet-neutron
