--- a/puppet.yaml
+++ b/puppet.yaml
@@ -1050,24 +1050,12 @@
               - change-merged-event
           projects:
             - project-compare-type: 'REG_EXP'
-              project-pattern: 'internal/puppet-.*'
+              project-pattern: '.*/puppet-(?!site-|library).*'
               branches:
                 - branch-compare-type: 'PLAIN'
                   branch-pattern: 'master'
                 - branch-compare-type: 'REG_EXP'
                   branch-pattern: 'nectar/.*'
-            - project-compare-type: 'REG_EXP'
-              project-pattern: 'NeCTAR-RC/puppet-.*'
-              branches:
-                - branch-compare-type: 'PLAIN'
-                  branch-pattern: 'master'
-                - branch-compare-type: 'REG_EXP'
-                  branch-pattern: 'nectar/.*'
-            - project-compare-type: 'REG_EXP'
-              project-pattern: 'resplat-.*/puppet-.*'
-              branches:
-                - branch-compare-type: 'PLAIN'
-                  branch-pattern: 'master'
           silent: false
           escape-quotes: true
 
