--- a/python.yaml
+++ b/python.yaml
@@ -242,6 +242,10 @@
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'py27'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'py36'
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
