--- a/images.yaml
+++ b/images.yaml
@@ -107,6 +107,13 @@
          default_user: 'ubuntu'
 
 - project:
+    name: jenkins-slave-ubuntu-20.04-x86_64
+    jobs:
+      - 'image-build-rctest-{name}':
+         image_name: '{name}'
+         default_user: 'ubuntu'
+
+- project:
     name: undercloud-ubuntu-16.04-x86_64
     jobs:
       - 'image-build-undercloud-{name}':
@@ -115,6 +122,13 @@
 
 - project:
     name: undercloud-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-undercloud-{name}':
+         image_name: '{name}'
+         default_user: 'root'
+
+- project:
+    name: undercloud-ubuntu-20.04-x86_64
     jobs:
       - 'image-build-undercloud-{name}':
          image_name: '{name}'
