Add functional tox job for nectar-tools
Change-Id: I3ff3dd6d97fa4752dd1b4031af32f78f3eda2067

--- a/python.yaml
+++ b/python.yaml
@@ -85,6 +85,10 @@
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'functional'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'cover'
       - '{name}-bionic-deb-package':
          access: 'anonymous'
