--- a/tempest.yaml
+++ b/tempest.yaml
@@ -34,6 +34,7 @@
           choices:
             - production
             - testing
+            - testing-uom
             - development
           description: "Cloud to run tempest on (Production, Test, Dev). Leave as Production if unsure."
       - choice:
@@ -111,6 +112,7 @@
           choices:
             - production
             - testing
+            - testing-uom
             - development
           description: "Cloud to run tempest on (Production, Test, Dev). Leave as Production if unsure."
       - choice:
