Update ERB test
Follow current Puppet (6.15) docs[1].

[1]: https://puppet.com/docs/puppet/latest/lang_template_erb.html#erb-validation

Change-Id: I5c06623ad4560d2c5a9978e2faae3eddd573126b

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -74,7 +74,7 @@
           find . -iname *.pp -not -path "./.bundled_gems/*" -execdir /opt/puppetlabs/bin/puppet parser validate --modulepath=`pwd`/modules {} \;
           find . -iname *.pp -not -path "./.bundled_gems/*" -execdir /opt/puppetlabs/bin/puppet parser validate --modulepath=`pwd`/modules {} +
           for f in `find . -iname *.erb -not -path "./.bundled_gems/*"` ; do
-            erb -x -T '-' $f | ruby -c
+            erb -P -x -T '-' $f | ruby -c
           done
 
 - builder:
