Add nectar-freshdesk CI jobs
Change-Id: Iedd1756c5bdb82a417996253bc566dae3527b23e

--- a/python.yaml
+++ b/python.yaml
@@ -875,3 +875,15 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'resplat-cloud'
+
+- project:
+    name: nectar-freshdesk
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'flake8'
