Add yaml linter for dashboard-dev
Change-Id: I4ee928458a7733f6e932d7bd15cea35ca551f105

--- a/other.yaml
+++ b/other.yaml
@@ -366,3 +366,10 @@
       - '{name}-dummy':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
+
+- project:
+    name: dashboard-dev
+    jobs:
+      - '{name}-yaml':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
