--- a/python.yaml
+++ b/python.yaml
@@ -397,6 +397,10 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py36'
+      - '{name}-bionic-train-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36-dj1'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
