Add nectar-dashboard django1 job
The default py36 job is now Django 2.

Change-Id: Ib4f0bd6bb6a4814260686bc34b543bffb1c7e4b3

--- a/python.yaml
+++ b/python.yaml
@@ -400,6 +400,11 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'py36-dj1'
+         os_release: 'train'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-os-deb-package':
          access: 'anonymous'
